@@ -1,3 +1,10 @@
+Mon Dec  5 11:25:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/cleanbuilds.sh:
+        * bin/mail_test_stats.sh:
+          Extended our daily test stats with another email, the failing tests
+          for today excluding the not fixed ones
+
 Mon Dec  5 08:35:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/Download.html:
